--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      body {
             background-color: #F8F8F8;
             text-align: center;
+           
         }
             main {
                 display: inline-block;
@@ -31,6 +32,8 @@
                         main > header > nav > a {
                             display: inline-block;
                             padding: 15px;
+                            padding-top: 5px;
+                            padding-bottom: 5px;
                             text-decoration: none;
                         }
                 main > section {
